--- a/src/routes/user/profil.scss
+++ b/src/routes/user/profil.scss
@@ -152,6 +152,7 @@
 				width: 250px;
 				height: 250px;
 				border-radius: 100%;
+				object-fit: cover;
 			}
 		}
 	}
